@startuml

enum AbioticFactor {
  AIR = 1
  SOIL = 2
  WATER = 3
}

enum ImageType {
  GIF = 1
  JPEG = 2
  PNG = 3
}

enum MeasurementUnit {
  ACIDITY_PH (0..14) = 1
  CARBON_DIOXIDE_PPM (0..100,000) = 2
  LIGHT_INTENSITY_LUX (0..150,000) = 3
  TEMPERATURE_CELCIUS (-270..1000) = 4
}

class Measurement {
  value: Double
  abioticFactor: AbioticFactor
  type: MeasurementUnit
}

class Note {
  note: String
}

class Organization {
  name: String
  description: String
  code: String
}

class Image {
  base64Encoded: String
  description: String
  imageType: ImageType
}

enum Role {
  OWNER
  MEMBER
}

class Survey {
  date: Date 
}

class Site {
  name: String
  description: String
  latitude: Double
  longitude: Double
  altitude: Double
  horizontalAccuracy: Double
  verticalAccuracy: Double
}

class Token {
  token: String 
}

class User {
  name: String
  email: String
  password: String
}

Measurement -- AbioticFactor
Measurement -- MeasurementUnit

Image -- ImageType

User "0" o-- "*" Organization: belongs
(User, Organization) .. Role
User "0" *-- "*" Token: authenticates
User "0" *-- "*" Site: defines
User "0" *-- "*" Survey: takes

Organization "0" *-- "*" Site

Site "0" *-- "*" Survey

Survey "0" *-- "*" Note
Survey "0" *-- "*" Image
Survey "0" *-- "*" Measurement

@enduml